<resources>
    <string name="app_name">Mnnit_Portal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ip1">https://cognitional-knee.000webhostapp.com/</string>
    <string name="ip">https://cognitional-knee.000webhostapp.com/</string>

    <string name="mnnitinfo">Motilal Nehru National Institute Of Technology, Allahabad was formerly Motilal Nehru Regional Engineering College, Allahabad . It is an institute with total commitment to quality and excellence in academic pursuits, is among one of the leading institutes in INDIA and was established in year 1961 as a joint enterprise of Govt. of India and Govt. of U.P. in accordance with the scheme of establishment of REC. However with effect from June 26th of 2002 the college became deemed university and is now known as Motilal Nehru National Institute of technology. The foundation stone of the college was laid by the first Prime Minister of India, Pt. Jawahar Lal Nehru on the 3rd of may, 1961 on a site spreading over 222 acres on the banks of the river Ganga. The main building of college was inaugurated by another illustrious son of India, Prime Minister Sri Lal Bahadur Shastri on 18th of April, 1965. The students are extensively exposed to cross-cultural environment as candidates from various other countries such as Sri Lanka, Nepal, Bangladesh, Bhutan, Mauritius, Malaysia, Iran, Yemen, Iraq, Palestine and Thailand also join MNNIT for various undergraduate and post-graduate programs. MNNIT is fully residential institution with eight hostels for boys and two for girls</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_login">Login/Register</string>
    <string name="nav_notification">Notifications</string>
    <string name="nav_calender">Academics Calender</string>
    <string name="nav_download">Download Section</string>
    <string name="nav_fee">Fees Structure</string>
    <string name="nav_about_us">About Us</string>




</resources>
